--- a/css/extra-styles.css
+++ b/css/extra-styles.css
@@ -31,7 +31,7 @@ div#map_canvas {
 have to add some extra css to the mapcontainer div */
 div#map_legend {
     max-width:30%;
-    float:left;
+    float:right;
 }
 
 /* if you want, you can make the text in the legend less ugly by adding
@@ -117,4 +117,3 @@ div.gm-style-iw blockquote {
    background-color: #F4F4F4;
    padding: 10px;
 }
-
