--- a/css/extra-styles.css
+++ b/css/extra-styles.css
@@ -96,6 +96,10 @@ div.gm-style-iw blockquote {
 /* Here's some adidtional CSS for the oral history project.  */
 
 /* AUDIO PLAYER */
+body{
+  background-color:#E8E8E0
+}
+
 #media {
     border: 4px solid #880000;
     width: 100%;
